# finabox.ia

./: .gitignore  Extrato-inter-01-07-2023-a-31-07-2023.csv  NU_579750386_01JUL2023_31JUL2023.csv  bill_reader.py  categorias.json  categorize.py  fatura.py  main.py  output.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.py  teste.txt
.github/workflows/: lint.yml  test.yml
controllers/: bill_reader.py  extract_reader.py
core/banks/: __init__.py  bank_factory.py  inter.py  meliuz.py  nubank.py  pan.py
core/credit_card/: __init__.py  bill_reader.py
core/interfaces/: __init__.py  interfaces.py
core/statement/: __init__.py  statement_reader.py
core/utils/: __init__.py  pdf.py  utils.py
finabox/: classifier.py
finabox/banks/: __init__.py  bank_factory.py  inter.py  meliuz.py  nubank.py  pan.py
finabox/classifier/: __init__.py  classifier.py
finabox/credit_card/: __init__.py  bill_reader.py
interfaces/: __init__.py  bill_interface.py  extract_interface.py
models/: __init__.py  bill_reader.py  categorize.py  pdf.py
resources/: categorias.json  categories-mapping.json  categories.json  estabelecimentos.json  estabilishments-mapping.json  establishments.json
scripts/: download_test_files.py
test/: test_classifier.py
tests/: 00_bill_utils_test.py  01_file_utils_test.py  01_nubank_test.py  02_meliuz_test.py  02_pdf_test.py  03_inter_test.py  04_meliuz_test.py  04_pan_test.py  05_bill_reader_test.py  06_pan_test.py  07_nubank_test.py  08_categorize_test.py  09_extract_reader_test.py  conftest.py  test_bill_utils.py
utils/: __init__.py  base_path.py  bill_utils.py  constants.py  utils.py
(+46 files in other folders)
