[project]
name = "finabox-ia"
version = "0.1.0"
description = "IA Model to categorize finance transactions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]


[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
