[project]
name = "finabox"
version = "0.1.0"
description = "financial control project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas==2.2.3",
    "pdf2image==1.17.0",
    "pypdf==5.1.0",
    "pytesseract==0.3.13",
    "scikit-learn>=1.6.0",
    "tabula-py==2.10.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.4",
    "pytest-cov==6.0.0",
    "pytest==8.3.3",
    "ruff==0.7.3",
    "taskipy==1.14.0",
    "google-api-python-client==2.156.0",
    "python-dotenv==1.0.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style =  'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-ra -q -p no:warnings --ignore=scripts'
python_files = [
    "test_*.py",
    "*_test.py",
]
testpaths = [
    "tests",
]

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
download_test_files='python scripts/download_test_files.py'
pre_test = 'task lint; task format; task download_test_files'
test = 'pytest -s -x --cov=. -vv'
post_test = 'coverage html'
